--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://repo.github.io/src/index.html">
+<meta http-equiv="refresh" content="0; url=https://github.com/nikiTomov01/CRUD/blob/fde626a996fd567123209f9020cd73b35a2b034a/src/index.html">
