--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./src/style.css">
 </head>
 <body>
     <header>
@@ -20,6 +20,6 @@
         <button id="add-note-btn">Add note</button>
     </footer>
 
-    <script src="../dist/main.js"></script>
+    <script src="./dist/main.js"></script>
 </body>
 </html>
